# wasmtime-serverless-performance

./: .gitignore  Cargo.toml  README.md  build.rs
python-spin-guest/: app.py
spin-guest/: Cargo.toml
spin-guest/src/: lib.rs
spin-sdk-guest/: Cargo.toml
spin-sdk-guest/src/: lib.rs
src/: lib.rs
wagi-guest/: Cargo.toml
wagi-guest/src/: main.rs
wit/: spin-http.wit
