[package]
name = "wasmtime-performance"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
wasi-preview1 = { package = "wasi-common", version = "7.0.0" }
wasmtime-wasi-preview1 = { package = "wasmtime-wasi", version = "7.0.0", features = ["tokio"] }
wasmtime = { version = "7.0.0", features = ["component-model"] }
anyhow = "1.0.70"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
spin-componentize = { git = "https://github.com/fermyon/spin-componentize" }
wasi-host = { package = "host", git = "https://github.com/fermyon/spin-componentize" }
wasmtime-wasi-preview2 = { package = "wasi-cap-std-sync", git = "https://github.com/fermyon/spin-componentize" }
wasi-preview2 = { package = "wasi-common", git = "https://github.com/fermyon/spin-componentize" }
tar = "0.4.38"
flate2 = "1.0.25"
reqwest = "0.11.16"
spin-guest = { path = "spin-guest" }
libc = "0.2.141"
errno = "0.3.1"
async-trait = "0.1.68"
tempfile = "3.5.0"
